subida de estilos de la pagina del home

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,5 @@
 <div class="fondo">
-    <h1>Adopta a un amigo</h1>
+    <div class="contenedor-texto">
+        <h1>Adopta a un amigo</h1>
+    </div>
 </div>
