--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,7 +1,26 @@
 .fondo {
     background-image: url(../../../../public/imgs/fondo.jpg);
-    background-repeat: no-repeat;
     background-size: cover;
+    background-position-y: -90px;
+    width: 100%;
+}
+
+.contenedor-texto { 
     width: 100%;
     height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+
+.contenedor-texto h1 {
+    color: #fff;
+    font-size: 40px;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+@media (min-width: 1025px) {
+    .fondo {
+        background-position-y: -400px;
+    }
 }
