subida de archivos importantes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
-<header>
-  <h1>Adopta un Amigo 🐾</h1>
-</header>
+<div class="contenedor-general">
 
-<app-navbar></app-navbar>
+  <app-navbar></app-navbar>
 
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 
-<footer>
-  &copy; 2025 Adopta un Amigo. Todos los derechos reservados.
-</footer>
+  <footer>
+    &copy; 2025 Adopta un Amigo. Todos los derechos reservados.
+  </footer>
+
+
+</div>
