--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,32 @@
-<div class="fondo">
-    <div class="contenedor-texto">
-        <h1>Adopta a un amigo</h1>
+<div class="contenedor-principal">
+
+    <div class="contenedor-fondo">
+        <img src="imgs/fondo.jpg" alt="">
     </div>
+
+    <div class="contenedor-mision">
+        <h2>Nuestra Mision</h2>
+    </div>
+
+    <div class="contenedor-texto-mision">
+        <div class="contenedor-img">
+            <img src="imgs/foto3.png" alt="">
+        </div>
+        <div class="contenedor-texto">
+                <p>NUESTRA MISION CONSISTE EN INSPIRAR UN CAMBIO DE MENTALIDAD QUE REPERCUTA POSITIVAMENTE EN LA CRITICA SITUACION QUE ENFRENTAMOS, VINCULADA A LA SOBREPOBLACION,  EL ABANDONO, LA CRUELDAD Y LA INDIFERENCIA QUE AFECTAN A MILLONES DE PERROS Y  GATOS EN NUESTRO PAIS.</p>
+        </div>
+    </div>
+
+    <div class="contenedor-adopta">
+
+        <div class="contenedor-img">
+            <img src="imgs/foto4.png" alt="">
+        </div>
+
+        <div class="contenedor-texto-adopta">
+        <h2>ADOPTA</h2>
+    </div>
+
+    </div>
+
 </div>
