--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,22 @@
-<nav style="background-color:#007bff; color:white; padding: 10px;">
-  <ul style="list-style: none; display: flex; cursor: pointer;">
-      <li><a routerLink="/home" style="color:white; margin-right: 15px; text-decoration:none;">Inicio</a></li>
-      <li><a routerLink="/animales" style="color:white; margin-right: 15px; text-decoration:none;">Animales</a></li>
-      <li><a routerLink="/nuevo" style="color:white; text-decoration:none;">Nuevo Animal</a></li>
-  </ul>
-</nav>
+<header>
+
+  <div class="contenedor-texto">
+    <img src="imgs/icon.png" alt="">
+    
+    <div class="contenedor-titulo">
+      <b>ADOPTA UN AMIGO</b>
+    </div>
+
+    <div class="contenedor-nav">
+      <nav>
+      <ul>
+        <li><a routerLink="/home">Inicio</a></li>
+        <li><a routerLink="/animales">Adoptar</a></li>
+        <li><a routerLink="/nuevo">Dar en adopcion</a></li>
+        <li><a routerLink="/nuevo">Contactanos</a></li>
+      </ul>
+    </nav>
+    </div>
+
+  </div>
+</header>
