--- a/src/app/components/animales/animales.component.css
+++ b/src/app/components/animales/animales.component.css
@@ -1,23 +1,62 @@
-.contenedor-general {
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 50px 0 50px;
+}
+
+.contenedor-titulo {
+    margin-top: 10px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: #ffa21f;
+    margin-bottom: 40px;
+}
+
+h2 {
+    font-size: 40px;
+}
+
+.contenedor-gral {
+    width: 90%;
     display: grid;
-    grid-template-columns: 50% auto;
+    grid-template-columns: auto auto auto;
+    justify-content: space-around;
+    gap: 20px;
 }
 
 .contenedor-animal {
+    background-image: linear-gradient(#ffa21f, #FFD08E);
     background-color: rgba(157, 157, 157, 0.5);
-    margin: 20px;
     width: 320px;
+    height: 300px;
     display: grid;
     grid-template-columns: 50% auto;
+    box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.5);
+    transition: .5s;
+}
+
+.contenedor-animal:hover {
+    transform: scale(1.2);
+    transition: .5s;
 }
 
 .contenedor-animal img {
     width: 200px;
+    height: 300px;
+    border-bottom-right-radius: 10%;
+    border-top-right-radius: 10%;
+    box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.5);;
 }
 
 .contenedor-texto { 
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 3px;
+    padding: 20px 3px 3px 3px;
+}
+
+.contenedor-desc {
+    padding: 2vh;
 }
