--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,9 +1,41 @@
-a {
-  text-decoration: none;
-  color: #333;
-  font-weight: bold;
+header {
+  margin: 20px 40px 0 60px;
 }
 
-a.active {
-  color: #007bff;
+.contenedor-texto {
+  display: grid;
+  grid-template-columns: 5% 25% 70%;
+  align-items: center;
+}
+
+.contenedor-texto img {
+  margin: 0 10px 0 10px;
+}
+
+.contenedor-texto .contenedor-titulo {
+  margin: 0 0 0 40px;
+  font-size: 25px;
+}
+
+.contenedor-nav {
+  display: flex;
+  justify-content: end;
+}
+
+.contenedor-texto nav ul {
+  display: flex;
+  list-style: none;
+  gap: 20px;
+}
+
+.contenedor-texto nav ul li a {
+  text-decoration: none;
+  color: #000;
+  font-size: 20px;
+  margin: 0 30px 0 0;
+}
+
+.contenedor-texto nav ul li a:hover {
+  font-weight: bold;
+  font-size: 19px;
 }
