--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,7 +10,7 @@
 
     <div class="contenedor-texto-mision">
         <div class="contenedor-img">
-            <img src="imgs/foto3.png" alt="">
+            <img src="imgs/foto3.jpg" alt="">
         </div>
         <div class="contenedor-texto">
                 <p>NUESTRA MISION CONSISTE EN INSPIRAR UN CAMBIO DE MENTALIDAD QUE REPERCUTA POSITIVAMENTE EN LA CRITICA SITUACION QUE ENFRENTAMOS, VINCULADA A LA SOBREPOBLACION,  EL ABANDONO, LA CRUELDAD Y LA INDIFERENCIA QUE AFECTAN A MILLONES DE PERROS Y  GATOS EN NUESTRO PAIS.</p>
