--- a/src/app/components/animales/animales.component.html
+++ b/src/app/components/animales/animales.component.html
@@ -22,11 +22,8 @@
           </div>
           </div>
 
-          @if ( animal.especie == 'Perro' ) {
-          <img src="imgs/foto2.jpg" alt="">
-          } @else {
-          <img src="imgs/foto1.jpg" alt="">
-          }
+          <img src="{{animal.fotoUrl}}" alt="">
+          
         </div>
 
         }
