--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -45,3 +45,60 @@
     display: flex;
     justify-content: center;
 }
+
+@media (max-width: 1024px) {
+  .contenedor-principal {
+    margin: 10px 20px 0 20px;
+  }
+
+  .contenedor-mision h2 {
+    font-size: 40px;
+    text-align: center;
+  }
+
+  .contenedor-texto-mision .contenedor-texto p {
+    font-size: 24px;
+    margin-left: 10px;
+  }
+
+  .contenedor-texto-adopta {
+    font-size: 40px;
+    text-align: center;
+    padding: 10px;
+  }
+}
+
+@media (max-width: 768px) {
+  .contenedor-fondo img {
+    height: 200px;
+    object-fit: cover;
+  }
+
+  .contenedor-img img {
+    height: auto;
+    max-height: 300px;
+    object-fit: contain;
+    margin-bottom: 15px;
+  }
+
+  .contenedor-mision h2 {
+    font-size: 32px;
+  }
+
+  .contenedor-texto-mision .contenedor-texto p {
+    font-size: 20px;
+    margin: 10px;
+    text-align: center;
+  }
+
+  .contenedor-texto {
+    padding: 10px;
+    margin-bottom: 15px;
+  }
+
+  .contenedor-texto-adopta {
+    font-size: 30px;
+    flex-direction: column;
+    text-align: center;
+  }
+}
