--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -39,3 +39,57 @@ header {
   font-weight: bold;
   font-size: 19px;
 }
+
+@media (max-width: 1024px) {
+  header {
+    margin: 20px;
+  }
+
+  .contenedor-texto {
+    grid-template-columns: 10% 30% 60%;
+  }
+
+  .contenedor-texto .contenedor-titulo {
+    font-size: 20px;
+    margin-left: 20px;
+  }
+
+  .contenedor-texto nav ul li a {
+    font-size: 18px;
+    margin-right: 15px;
+  }
+}
+
+@media (max-width: 768px) {
+  .contenedor-texto {
+    grid-template-columns: 1fr;
+    text-align: center;
+    gap: 10px;
+  }
+
+  .contenedor-texto img {
+    margin: 0 auto;
+    max-width: 80px;
+  }
+
+  .contenedor-texto .contenedor-titulo {
+    margin: 0;
+    font-size: 22px;
+  }
+
+  .contenedor-nav {
+    justify-content: center;
+    margin-top: 10px;
+  }
+
+  .contenedor-texto nav ul {
+    flex-direction: column;
+    gap: 10px;
+    padding: 0;
+  }
+
+  .contenedor-texto nav ul li a {
+    font-size: 18px;
+    margin: 0;
+  }
+}
