--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,7 @@
         <li><a routerLink="/home">Inicio</a></li>
         <li><a routerLink="/animales">Adoptar</a></li>
         <li><a routerLink="/nuevo">Dar en adopcion</a></li>
-        <li><a routerLink="/nuevo">Contactanos</a></li>
+        <li><a routerLink="/contactanos">Contactanos</a></li>
       </ul>
     </nav>
     </div>
